{{$NEXT}}

0.60     2017-07-03

- Attempted to fix a bug related to how git stash is used in the git
  pre-commit hook. The "git stash pop" command was happening too early, which
  would block commits when all the files in the index were tidy but the
  working directory contained untidy files. Based on PR #58 from Finn Smith.


0.59     2017-05-14

- Work around issue with Perl::Tidy when Getopt::Long::Configure is called
  before we call Perl::Tidy::perltidy. See
  https://rt.cpan.org/Ticket/Display.html?id=118558 for details.


0.58     2017-03-11

- Don't assume that '.' is in @INC in the Makefile.PL.

- Don't ship the node or PHP code used for tests in the tarball. This makes it
  much smaller.


0.57     2017-02-19

- Fix code that called a Specio private method directly.


0.56     2017-02-01

- Fixed Win32 test failures. Reported by Christian Walde. GH #72.

- Added a global ignore feature. You can now provide ignore configuration at
  the top level of your tidyall config file and/or pass an --ignore flag on
  the command line. Any ignores specified this way will be ignore for all
  plugins. Based on GH #73 from Martin Guner.


0.55     2016-10-31

- Require Moo 2.000000 or greater.


0.54     2016-10-15

- Fixed error when passing in paths as a string to the Code::TidyAll
  constructor. These are now coerced to Path::Tiny objects. Reported by Martin
  Gruner. GH #66.


0.53     2016-10-10

[BUG FIXES]

- Fixed failing tests on OSX. Reported by Martin Gruner. GH #65.

- Files that were tidied could have their permissions mode when they were
  rewritten. Reported by Martin Gruner (GH #68) and fixed by Adam Herzog (GH
  #69).


0.52     2016-09-19

[BUG FIXES]

- The 0.50 release added an implicit configure phase prereq on Path::Tiny
  without declaring it. That bit of code has been reverted to use just core
  modules.

- Change tidyall shbang line to "#!perl". I had changed it to "#!/usr/bin/env
  perl" but MakeMaker does not rewrite this on install.

